# wagemos

./: Cargo.toml  justfile
.cargo/: config
artifacts/: abstract_betting_app.wasm  checksums.txt
examples/: deploy.rs
src/: contract.rs  error.rs  lib.rs  msg.rs  state.rs
src/handlers/: execute.rs  instantiate.rs  query.rs
tests/: integration.rs
