[package]
name = "abstract-betting-app"
version = "0.2.0"
authors = [
  "CyberHoward <cyberhoward@protonmail.com>",
  "Adair <adair@abstract.money>",
  "Abstract Money <contact@abstract.money>",
]
edition = "2021"
homepage = ""
documentation = ""
repository = ""
license = "GPL-3.0-or-later"
keywords = ["cosmos", "cosmwasm", "abstractsdk"]
resolver = "2"

exclude = ["contract.wasm", "hash.txt"]

[lib]
crate-type = ["cdylib", "rlib"]

[[example]]
name = "schema"
required-features = ["schema"]


[[example]]
name = "deploy"
required-features = ["interface"]

[features]
default = ["export"]
export = []
# enable node-backed tests (ensure Docker is running)
# run with `cargo test --jobs 1 --features node-tests`
node-tests = ["interface"]
interface = ["export", "dep:abstract-interface", "dep:cw-orch"]
schema = ["abstract-app/schema"]

[dependencies]
cosmwasm-std = { version = "2.0.7", features = ["cosmwasm_2_0"] }
cosmwasm-schema = { version = "2.0.7" }
cw-controllers = { version = "2.0.0" }
cw-storage-plus = "2.0.0"
thiserror = { version = "1.0.50" }
schemars = "0.8"
cw-asset = { version = "4.0.0" }

abstract-core = { package = "abstract-std", version = "0.23.0", git = "https://github.com/AbstractSDK/abstract", branch = "develop/v2" }
abstract-app = { version = "0.23.0" , git = "https://github.com/AbstractSDK/abstract", branch = "develop/v2" }
abstract-sdk = { version = "0.23.0" , git = "https://github.com/AbstractSDK/abstract", branch = "develop/v2" }

# Dependencies for interface
abstract-interface = { version = "0.23.0", optional = true, git = "https://github.com/AbstractSDK/abstract", branch = "develop/v2" }
cw-orch = { version = "0.25.1", optional = true }

[dev-dependencies]
betting-app = { path = ".", package = "abstract-betting-app", features = ["interface"] }
abstract-interface = { version = "0.23.0", features = ["daemon"], git = "https://github.com/AbstractSDK/abstract", branch = "develop/v2" }
abstract-testing = { version = "0.23.0", git = "https://github.com/AbstractSDK/abstract", branch = "develop/v2" }
abstract-sdk = { version = "0.23.0", features = ["test-utils"], git = "https://github.com/AbstractSDK/abstract", branch = "develop/v2" }
abstract-client = { version = "0.23.0" , git = "https://github.com/AbstractSDK/abstract", branch = "develop/v2" }
speculoos = "0.11.0"
semver = "1.0"
dotenv = "0.15.0"
env_logger = "0.10.0"
cw-orch = { version = "0.25.1", features = ["daemon"] }
clap = { version = "4.3.7", features = ["derive"] }

[profile.release]
rpath = false
lto = true
overflow-checks = true
opt-level = 3
debug = false
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
